--- a/muapp/templates/blog.html
+++ b/muapp/templates/blog.html
@@ -34,7 +34,7 @@
                 {% for mu in musinsa %}
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="p-4" style="background-color: #F5F5F5;">  
-                        <a class="d-block h5 lh-base mb-4 jamsil text-center border-bottom pb-3" style="color: black; text-shadow: -1px 0px white, 0px 1px white, 1px 0px white, 0px -1px white; font-size: 25px;" href="{{mu.item_page}}">{{mu.item_title}}</a>
+                        <a class="d-block h5 lh-base mb-4 jamsil text-center border-bottom pb-3" target="_blank" style="color: black; text-shadow: -1px 0px white, 0px 1px white, 1px 0px white, 0px -1px white; font-size: 25px;" href="{{mu.item_page}}">{{mu.item_title}}</a>
                         <a class="d-block h5 lh-base mb-4 jamsil text-center" target="_blank" title="{{mu.item_title}}" href="{{mu.item_page}}">
                             <img src="{{ mu.item_picture }}" class="img-fluid pt-4" alt="{{mu.item_title}}"></a>
                         <div class="text-muted border-top pt-4 d-flex justify-content-between">
