virtual_fit 작업중

--- a/muapp/templates/view_closet.html
+++ b/muapp/templates/view_closet.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block closet %}
-    <a href="#" class="nav-link dropdown-toggle active jamsil" data-bs-toggle="dropdown">Clothes</a>
+    <a href="{% url 'view_closet' %}" class="nav-item nav-link active jamsil" >Clothes</a>
 {% endblock closet %}
 
 {% block content %}
