--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -67,7 +67,8 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle jamsil" data-bs-toggle="dropdown">가상피팅</a>             
                         <div class="dropdown-menu m-0" style="top: 60px;">
-                            <a href="{% url 'virtual_fit' user.first_name %}" class="dropdown-item nav-link jamsil">가상 피팅</a>
+                            <a href="{% url 'virtual_fit' user.first_name %}" class="dropdown-item nav-link jamsil">가상 피팅(동영상)</a>
+                            <a href="{% url 'virtual_fit' user.first_name %}" class="dropdown-item nav-link jamsil">가상 피팅(사진)</a>
                         </div>
                     </div>
                     <a href="{% url 'view_closet' user.first_name %}" class="nav-item nav-link jamsil jamsil">내 옷장</a>
