--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <a href="{% url 'view_closet' user.first_name %}" class="nav-item nav-link jamsil jamsil">내 옷장</a>
-                    <a href="{% url 'blog' user.first_name %}" class="nav-item nav-link jamsil jamsil">코디북</a>
+                    <a href="{% url 'codibook' user.first_name %}" class="nav-item nav-link jamsil jamsil">코디북</a>
                     <a href="{% url 'mypage' user.first_name %}" class="nav-item nav-link jamsil vis">마이페이지</a>  
                     <a href="{% url 'logout' %}" class="nav-item nav-link jamsil vis">로그아웃</a>    
                     {% else %}
@@ -135,9 +135,9 @@
                     {% if user.is_authenticated %}
                     <a class="btn btn-link jamsil" href="{% url 'virtual_fit' user.first_name %}">가상 피팅</a>
                     <a class="btn btn-link jamsil" href="{% url 'view_closet' user.first_name %}">옷장 관리</a>
-                    <a class="btn btn-link jamsil" href="{% url 'blog' user.first_name %}">코디 추천</a>
+                    <a class="btn btn-link jamsil" href="{% url 'codibook' user.first_name %}">코디 추천</a>
                     {% else %}
-                    <a class="btn btn-link jamsil" href="{% url 'blog' " " %}">코디 추천</a>
+                    <a class="btn btn-link jamsil" href="{% url 'codibook' " " %}">코디 추천</a>
                     {% endif %}
                     
                 </div>
