--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -30,9 +30,9 @@
                                     <h1 class="display-1 mb-5 animated slideInDown jamsil fonts" style="color: white; text-shadow: 2px 2px 4px black;">집에서 사고 싶은 옷을 쉽게 피팅해봐요! </h1>
                                     {% if user.is_authenticated %}
                                     <a href="{% url 'virtual_fit' user.first_name %}" class="btn btn-primary btn-lg rounded-pill py-sm-3 px-sm-5 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;">피팅하기</a>
-                                    <a href="{% url 'blog' user.first_name %}" class="btn btn-secondary btn-lg rounded-pill py-sm-3 px-sm-5 ms-3 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;">코디북 모으기</a>
+                                    <a href="{% url 'codibook' user.first_name %}" class="btn btn-secondary btn-lg rounded-pill py-sm-3 px-sm-5 ms-3 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;">코디북 모으기</a>
                                     {% else %}
-                                    <a href="{% url 'blog' " " %}" class="btn btn-secondary btn-lg rounded-pill py-sm-3 px-sm-5 ms-3 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;">코디북 모으기</a>
+                                    <a href="{% url 'codibook' " " %}" class="btn btn-secondary btn-lg rounded-pill py-sm-3 px-sm-5 ms-3 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;">코디북 모으기</a>
                                     {% endif %}
                                 </div>
                             </div>
@@ -131,9 +131,9 @@
                         <h4 class="mb-3 jamsil">코디 추천</h4>
                         <p class="mb-4 jamsil">오늘 날씨에 뭘 입어야할지 모를때<br>코디를 추천해줍니다!</p>
                         {% if user.is_authenticated %}
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'blog' user.first_name %}">더보기</a>
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'codibook' user.first_name %}">더보기</a>
                         {% else %}
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'blog' " " %}">로그인 하기</a>
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'codibook' " " %}">로그인 하기</a>
                         {% endif %}
                     </div>
                 </div>
