검색필터 수정 중

--- a/muapp/templates/update_closet.html
+++ b/muapp/templates/update_closet.html
@@ -63,7 +63,7 @@
                                     <select name="type1" id="type1" size="1" class="form-select col" required>
                                         <option value="none" disabled>=== 분류 1 ===</option>
                                         <option>상의</option>
-                                        <option>바지</option>
+                                        <option>하의</option>
                                         <option>치마</option>
                                         <option>원피스</option>
                                         <option>아우터</option>
@@ -320,7 +320,7 @@
             changeItem = top;
             document.getElementById("type1").options[1].selected=true;
         }
-        else if(selectedMain == "바지"){
+        else if(selectedMain == "하의"){
             changeItem = pants;
             document.getElementById("type1").options[2].selected=true;
         }
