--- a/muapp/templates/upload_closet.html
+++ b/muapp/templates/upload_closet.html
@@ -63,7 +63,7 @@
                                     <select name="type1" id="type1" size="1" class="form-select col" required>
                                         <option value="none" disabled selected>=== 분류 1 ===</option>
                                         <option>상의</option>
-                                        <option>바지</option>
+                                        <option>하의</option>
                                         <option>치마</option>
                                         <option>원피스</option>
                                         <option>아우터</option>
