--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -29,10 +29,13 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/css/login-register.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/login-register.css' %}" rel="stylesheet">
 
     <!-- Template Stylesheet -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    
 
     {% block style %}
                        
@@ -40,6 +43,7 @@
 </head>
 
 <body>
+
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border text-primary" role="status"></div>
@@ -63,6 +67,7 @@
                     {% block nav %}
                        
                     {% endblock nav %}
+                    <a href="{% url 'usercodi' %}" class="nav-item nav-link jamsil{% if 'usercodi' in request.path %} active{% endif %}">옷 자랑</a>
                     {% if user.is_authenticated %}
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle jamsil" data-bs-toggle="dropdown">가상피팅</a>             
@@ -83,7 +88,7 @@
                 </div>
                 <div class="d-none d-lg-flex ms-2">
                     {% if user.is_authenticated %}
-                    <span class="nav-link jamsil" style="padding-left: 0px;"><a href="{% url 'mypage' user.first_name %}">{{ user.name }}</a><span style="color: black;">님 반갑습니다!</span></span><button type="button" class="nav-link btn btn-outline-primary btn-sm jamsil" style="color: black;" onclick="location.href='{% url 'logout' %}'">로그아웃</button>
+                    <span class="nav-link jamsil" style="padding-left: 0px;"><a href="{% url 'mypage' user.first_name %}">{{ user.name }}</a><span style="color: black;">님 반갑습니다!</span></span><button type="button" class="nav-link btn btn-outline-primary btn-sm jamsil border-2" style="color: black;" onclick="location.href='{% url 'logout' %}'">로그아웃</button>
                     {% else %}
                     <a class="btn-sm-square bg-white rounded-circle ms-3" href="{% url 'login' %}">
                         <small class="fas fa-user-large text-body"></small>
