--- a/muapp/templates/codibook.html
+++ b/muapp/templates/codibook.html
@@ -25,25 +25,26 @@
     <!-- Blog Start -->
     <div class="container-xxl py-6" style="padding-bottom: 20px; padding-top: 60px;">
         <div class="container jamsil">
-            <div class="section-header text-center mx-auto wow fadeInUp jamsil" data-wow-delay="0.1s" style="max-width: 500px; margin-bottom: 30px;">
+            <div class="section-header text-center mx-auto wow fadeIn jamsil" data-wow-delay="0.1s" style="max-width: 500px; margin-bottom: 30px;">
                 <h1 class="display-5 mb-3 jamsil">코디 북</h1>       
                 <p>관심있는 스타일의 코디들을 확인해 보세요!</p>
             </div>
             <div class="row g-4">
                 {% for mu in musinsa %}
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="p-4" style="background-color: #F5F5F5;">  
+                {% load clothes_extra %}
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="{{ forloop.counter0|floatformat:1|delay:0.2 }}s">
+                    <div class="p-4 mucodi" style="background-color: #F5F5F5;">  
                         <a class="d-block h5 lh-base mb-4 jamsil text-center border-bottom pb-3" target="_blank" style="color: black; text-shadow: -1px 0px white, 0px 1px white, 1px 0px white, 0px -1px white; font-size: 25px;" href="{{mu.item_page}}">{{mu.item_title}}</a>
                         <a class="d-block h5 lh-base mb-4 jamsil text-center" target="_blank" title="{{mu.item_title}}" href="{{mu.item_page}}">
-                            <img src="{{ mu.item_picture }}" class="img-fluid pt-4" alt="{{mu.item_title}}"></a>
+                            <img src="{{ mu.item_picture }}" class="img-fluid shadow mt-2" alt="{{mu.item_title}}" style="border-radius: 20px;"></a>
                         <div class="text-muted border-top pt-4 d-flex justify-content-between">
                             <small><i class="fa fa-user text-primary me-2 jamsil"></i>{{mu.item_model}}</small>
-                            <small><i class="fa fas fa-clone text-primary me-2"></i>{{mu.item_text}}</small>
+                            <small><i class="fa fas fa-clone text-secondary me-2"></i>{{mu.item_text}}</small>
                         </div>
                     </div>
                 </div>
                 {% endfor %}
-                <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s" style="margin-top: 40px; margin-bottom: 10px;">
+                <div class="col-12 text-center" style="margin-top: 40px; margin-bottom: 10px;">
                     {% if musinsa.has_other_pages %}
                     <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s">
                         {% if musinsa.has_previous %}
