--- a/muapp/templates/view_closet.html
+++ b/muapp/templates/view_closet.html
@@ -48,7 +48,7 @@
     <!-- Message End-->
 
     <!-- Product Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5 wow fadeIn" data-wow-delay="0.2s">
         <div class="container">
             <div class="btn-container" name="btn-container">
                 <button class="btn-submit" type="button" onclick = "location.href = '{% url 'uploadCloset' user.first_name %}' " onkeyup="if(window.event.keyCode==13){}">
@@ -118,29 +118,37 @@
             <div class="tab-content">
                 <div id="tab-1" class="tab-pane fade show p-0 active">
                     <div class="row g-4">
-                            {% for c in clothesobject %}
-                                {% if c.uploadUser_id == user.id and c.groupID %}
+                        {% for c in clothesobject %}
+                            {% if c.uploadUser_id == user.id and c.groupID %}
                                 {% if c.groupID %}
-                                        <div class="col-xl-3 col-lg-4 col-md-6">
-                                            <div class="product-item jamsil">
-                                                <div class="position-relative bg-light overflow-hidden">
-                                                    {% load clothes_extra %}
-                                                        <a href="{% url 'detail_closet' user.first_name c.groupID %}">
-                                                            <img class="img-fluid w-100" src="{{c.groupID|getGroupIdFirst}}" width="200px" height="300px" margin="10%" padding="10%" alt="">
-                                                        </a>
-                                                </div>
-                                                <div class="text-center p-4">
-                                                    <a class="d-block p mb-2" href="{% url 'detail_closet' user.first_name c.groupID %}">{{c.name}}</a>
-                                                </div>
-                                                <hr width="90%" align="center" style="margin-left: 14px;">
-                                                <div class="text-end p-3">
-                                                    <a class="d-block p mb-2 text-black-50" href="{% url 'detail_closet' user.first_name c.groupID %}" style='padding-right: 10px;'>{{c.type1}}-{{c.type2}}</a>
-                                                </div>
-                                            </div>      
+                                {% load clothes_extra %}
+                                <div class="col-xl-3 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="{{ forloop.counter0|floatformat:1|delay:0.2 }}s">
+                                    
+                                    <div class="product-item jamsil shadow" style="border-radius: 20px;">
+                                        
+                                        <div class="position-relative bg-light overflow-hidden" style="border-radius: 20px 20px 0 0;">
+                                            
+                                            <a href="{% url 'detail_closet' user.first_name c.groupID %}">
+                                                
+                                                <img class="img-fluid w-100" src="{{c.groupID|getGroupIdFirst}}" width="200px" height="300px" margin="10%" padding="10%" alt="">
+                                            </a>
                                         </div>
+                                        <div class="text-center p-4">
+                                            <a class="d-block p mb-2" href="{% url 'detail_closet' user.first_name c.groupID %}">{{c.name}}</a>
+                                        </div>
+                                        <hr width="90%" align="center" style="margin-left: 14px;">
+                                        <div class="text-end p-3">
+                                            <a class="d-block p mb-2 text-black-50" href="{% url 'detail_closet' user.first_name c.groupID %}" style='padding-right: 10px;'>{{c.type1}}-{{c.type2}}</a>
+                                            {% if c.ucodi == True %}
+                                            <span class="translate-middle badge bg-danger rounded-pill jamsil shadow" style="position:relative; top: 40px; left: 60px; font-size: 1rem;">자랑!</span>
+                                            {% endif %}
+                                        </div>
+                                        
+                                    </div>      
+                                </div>
                                 {% endif%}
-                                {% endif%}
-                            {% endfor %}
+                            {% endif%}
+                        {% endfor %}
                     </div>
                 </div>
                 
