업로드 수정

--- a/muapp/templates/detail_usercodi.html
+++ b/muapp/templates/detail_usercodi.html
@@ -91,7 +91,7 @@
                             <p class="comment-text">{{ comment.text }}</p>
                         </div>
                         {% empty %}
-                            <p>댓글이 없습니다.</p>
+                            <p>댓글이 없습니다. 댓글을 입력해주세요!</p>
                         {% endfor %}
 
                         {% if user.is_authenticated %}
