--- a/muapp/templates/codibook.html
+++ b/muapp/templates/codibook.html
@@ -36,7 +36,7 @@
                     <div class="p-4 mucodi" style="background-color: #F5F5F5;">  
                         <a class="d-block h5 lh-base mb-4 jamsil text-center border-bottom pb-3" target="_blank" style="color: black; text-shadow: -1px 0px white, 0px 1px white, 1px 0px white, 0px -1px white; font-size: 25px;" href="{{mu.item_page}}">{{mu.item_title}}</a>
                         <a class="d-block h5 lh-base mb-4 jamsil text-center" target="_blank" title="{{mu.item_title}}" href="{{mu.item_page}}">
-                            <img src="{{ mu.item_picture }}" class="img-fluid shadow mt-2" alt="{{mu.item_title}}" style="border-radius: 20px;"></a>
+                            <img src="{{ mu.item_picture }}" class="img-thumbnail shadow mt-2" alt="{{mu.item_title}}" style="border-radius: 20px;"></a>
                         <div class="text-muted border-top pt-4 d-flex justify-content-between">
                             <small><i class="fa fa-user text-primary me-2 jamsil"></i>{{mu.item_model}}</small>
                             <small><i class="fa fas fa-clone text-secondary me-2"></i>{{mu.item_text}}</small>
