--- a/muapp/templates/detail_closet.html
+++ b/muapp/templates/detail_closet.html
@@ -31,7 +31,7 @@
                 <a class="btn btn-lg btn-outline-primary border-2 jamsil" href="{% url 'view_closet' user.first_name %}">목록</a>
             </div>
             <br>
-            <div class="tab-content">
+            <div class="tab-content wow fadeIn" data-wow-delay="0.1s">
                 <div id="tab-1" class="tab-pane fade show p-0 active">
                     <div class="row g-4">
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" > 
