--- a/muapp/templates/upload_closet.html
+++ b/muapp/templates/upload_closet.html
@@ -87,7 +87,7 @@
                                     <label for="tag" class="col-sm-1 col-form-label text-end fw-bold">태그</label>
                                     <input type="text" name="tag" id="tag" class="form-control col" 
                                            placeholder="#꾸안꾸 #출근룩 #가죽 #스웨이드 (특수문자🙅‍♀️)"/>
-                                    <button type="button" id="btn_addtag" class="btn_addtag col-sm-2 btn btn-outline-dark border-2" style="border-radius:6px; margin-left: 10px; width: 120px;">추가</button>
+                                    <button type="button" id="btn_addtag" class="btn_addtag col-sm-1 btn btn-outline-dark border-2" style="border-radius:6px; margin-left: 10px; width: 120px;">추가</button>
                                 </div>
                                 <div class="mb-3 row">
                                     <label class="col-sm-1 col-form-label text-end"></label>
@@ -105,17 +105,17 @@
                                 </div>
                                 
                                 <div class="mb-3 row">
-                                    <label class="col-sm-2 col-form-label fw-bold"></label>
+                                    <label class="col-sm-1 col-form-label fw-bold"></label>
                                     <div class="form-check col">
                                         <label class="form-check-label jamsil" for="ucodi">내 옷 자랑하기</label>
-                                        <input class="form-check-input" type="checkbox" id="ucodi" style="float:none; margin-left:0.2em;" value="True">
+                                        <input class="form-check-input" name="ucodi" type="checkbox" id="ucodi" style="float:none; margin-left:0.2em;" value="True">
                                     </div>
                                 </div>
                                 
                                 <input hidden id="groupID" type="text"></input>
                                 <!-- Uppy Dashboard -->
                                 <div class="mb-3 row">
-                                    <label class="col-sm-2"></label>
+                                    <label class="col-sm-1"></label>
                                     <div class="fileUploadContent col"></div>
                                 </div>
 
