--- a/muapp/templates/usercodi.html
+++ b/muapp/templates/usercodi.html
@@ -36,7 +36,7 @@
                     <div class="p-4 mucodi" style="background-color: #F5F5F5;">  
                         <a class="d-block h5 lh-base mb-4 jamsil text-center border-bottom pb-3" target="_blank" style="color: black; text-shadow: -1px 0px white, 0px 1px white, 1px 0px white, 0px -1px white; font-size: 25px;" href="{% url 'detail_usercodi' c.groupID %}" >{{c.name}}</a>
                         <a class="d-block h5 lh-base mb-4 jamsil text-center" title="{{c.name}}" href="{% url 'detail_usercodi' c.groupID %}" >
-                            <img src="{{ c.groupID|getGroupIdFirst }}" class="img-fluid mt-2 shadow w-75" alt="{{mu.item_title}}" style="border-radius: 20px;"></a>
+                            <img src="{{ c.groupID|getGroupIdFirst }}" class="img-thumbnail mt-1 shadow w-75" alt="{{mu.item_title}}" style="border-radius: 20px; width: 240px; height: 360px;"></a>
                         <div class="text-muted border-top pt-4 d-flex justify-content-between">
                             <small><i class="fa fa-user text-primary me-2 jamsil"></i>{{c.uploadUserName}}</small>
                             <small><i class="fa fas fa-clone text-secondary me-2"></i>{{c.type1}} - {{c.type2}}</small>
